# easy-llama

./: .gitmodules  DOCS.md  LICENSE  MANIFEST.in  README.md  RECOMMENDATIONS.md  docs.md  easy_llama.py  formats.py  gguf_reader.py  globals.py  model.py  pyproject.toml  samplers.py  setup.py  supressor.py  thread.py  utils.py
.obsidian/: workspace.json
easy_llama/: README.md  __init__.py  _internals.py  _testing.py  _version.py  constants.py  extra_types.py  formats.py  index.html  libllama.py  llama.py  llama_cpp.py  model.py  samplers.py  sampling.py  script.js  server.py  testing.py  thread.py  utils.py  webui.py  wrappers.py
easy_llama/assets/: client.js  index.html  script.js  settings.html  settings.js  site.webmanifest  styles.css
easy_llama/templates/: index.html  styles.css
easy_llama/tests/: test_model.py
easy_llama/webui/: style.css
examples/: chat_demo.py  ez_example.py  instruct_demo.py  personal_chatbot_server.py  pretrained_demo.py  simple.py  template.py
tests/: test_utils.py
