[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_llama"
version = "0.2.0"
description = "Text generation in Python, as easy as possible"
readme = { text = "For more information, visit the project's GitHub repository:\n\nhttps://github.com/ddh0/easy-llama", content-type = "text/markdown" }
authors = [
    { name = "Dylan Halladay", email = "dylanhalladay02@icloud.com" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "cryptography",
    "numpy",
    "Flask",
]

[project.urls]
Homepage = "https://github.com/ddh0/easy-llama/"
Documentation = "https://github.com/ddh0/easy-llama/blob/main/DOCS.md"

[tool.setuptools]
packages = ["easy_llama", "easy_llama.assets"]
include-package-data = true

[tool.setuptools.package-data]
"easy_llama.assets" = [
    "*.ico",
    "*.png",
    "*.html",
    "*.css",
    "*.js",
    "*.webmanifest",
]
